--- a/commons-rng-core/pom.xml
+++ b/commons-rng-core/pom.xml
@@ -34,10 +34,11 @@
   <description>Pure Java implementations of random numbers generator algorithms.</description>
 
   <properties>
-    <!-- This value must reflect the current name of the base package. -->
-    <commons.osgi.symbolicName>org.apache.commons.rng.core</commons.osgi.symbolicName>
     <!-- OSGi -->
+    <commons.osgi.symbolicName>org.apache.commons.rng.core</commons.osgi.symbolicName>
     <commons.osgi.export>org.apache.commons.rng.core</commons.osgi.export>
+    <!-- Java 9+ -->
+    <commons.automatic.module.name>org.apache.commons.rng.core</commons.automatic.module.name>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
   </properties>
