--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,11 @@
          name of the base package evolves with major release numbers
          (see "commons.osgi.symbolicName", below). -->
     <commons.componentid>rng</commons.componentid>
-    <!-- This value must reflect the current name of the base package. -->
-    <commons.osgi.symbolicName>org.apache.commons.rng</commons.osgi.symbolicName>
-    <commons.module.name>org.apache.commons.rng</commons.module.name>
     <!-- OSGi -->
-    <commons.osgi.export>org.apache.commons.rng</commons.osgi.export>
+    <commons.osgi.symbolicName>org.apache.commons.rng.parent</commons.osgi.symbolicName>
+    <commons.osgi.export>org.apache.commons.rng.parent</commons.osgi.export>
+    <!-- Java 9+ -->
+    <commons.automatic.module.name>org.apache.commons.rng.parent</commons.automatic.module.name>
     <!-- do not use snapshot suffix here -->
     <commons.release.version>1.0</commons.release.version>
     <commons.release.desc>(requires Java 6+)</commons.release.desc>
@@ -143,6 +143,19 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive combine.children="append">
+            <manifestEntries>
+              <!-- Java 9 -->
+              <Automatic-Module-Name>${commons.automatic.module.name}</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
