--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <!-- Default "forkCount" leads to build failure on JDK 9. -->
+          <forkCount>0</forkCount>
           <includes>
             <include>**/*Test.java</include>
           </includes>
