--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -31,7 +31,8 @@
   <version>1.1-SNAPSHOT</version>
   <name>Apache Commons RNG Examples</name>
 
-  <description>Examples of use of the random numbers generator implemented in the "commons-rng-simple" module.</description>
+  <description>Examples of use of the random numbers generator implemented in the "commons-rng-simple" module.
+  Code in this module is not part of the public API.</description>
 
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
