--- a/commons-rng-jmh/pom.xml
+++ b/commons-rng-jmh/pom.xml
@@ -31,7 +31,8 @@
   <version>1.1-SNAPSHOT</version>
   <name>Apache Commons RNG JMH</name>
 
-  <description>Code for running JMH benchmarks that assess the performance of the generators.</description>
+  <description>Code for running JMH benchmarks that assess the performance of the generators.
+  Code in this module is not part of the public API.</description>
 
   <dependencies>
     <dependency>
