--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
     <maven.compiler.target>1.6</maven.compiler.target>
     <rng.pmd.version>3.5</rng.pmd.version>
     <rng.findbugs.version>3.0.2</rng.findbugs.version>
-    <rng.checkstyle.version>2.17</rng.checkstyle.version>
+    <rng.checkstyle.version>3.0.0</rng.checkstyle.version>
     <rng.clirr.version>2.8</rng.clirr.version>
     <rng.mathjax.version>2.7.2</rng.mathjax.version>
     <!-- Workaround to avoid duplicating config files. -->
@@ -264,6 +264,7 @@
             <logViolationsToConsole>false</logViolationsToConsole>
             <failOnViolation>false</failOnViolation>
             <resourceExcludes>NOTICE.txt,LICENSE.txt</resourceExcludes>
+            <excludes>**/module-info.java</excludes>
           </configuration>
         </plugin>
       </plugins>
@@ -335,6 +336,7 @@
           <headerLocation>${rng.parent.dir}/src/main/resources/checkstyle/license-header.txt</headerLocation>
           <enableRulesSummary>false</enableRulesSummary>
           <includeResources>false</includeResources>
+          <excludes>**/module-info.java</excludes>
         </configuration>
         <reportSets>
           <reportSet>
@@ -585,6 +587,7 @@
     <module>commons-rng-simple</module>
     <module>commons-rng-sampling</module>
     <module>commons-rng-jmh</module>
+    <module>commons-rng-jpms</module>
     <!--
         Built only upon explicit request (requires Java 1.7+).
         See profile "commons-rng-examples".
