--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <groupId>org.apache.commons</groupId>
-  <artifactId>examples-jmh</artifactId>
+  <artifactId>commons-rng-examples-jmh</artifactId>
   <version>1.1-SNAPSHOT</version>
   <name>Apache Commons RNG JMH Benchmark</name>
 
