--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -61,6 +61,12 @@
         <artifactId>commons-rng-sampling</artifactId>
         <version>1.1-SNAPSHOT</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-rng-client-api</artifactId>
+        <version>1.1-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -69,5 +75,6 @@
     <module>examples-sampling</module>
     <module>examples-quadrature</module>
     <module>examples-jmh</module>
+    <module>examples-jpms</module>
   </modules>
 </project>
