Name of example modules.

--- a/commons-rng-examples/examples-jpms/pom.xml
+++ b/commons-rng-examples/examples-jpms/pom.xml
@@ -30,7 +30,7 @@
   <artifactId>commons-rng-examples-jpms</artifactId>
   <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Apache Commons RNG JPMS Integration test</name>
+  <name>JPMS Integration test</name>
 
   <description>Testing JPMS. Code in this module is not part of the public API.</description>
 
