--- a/commons-rng-examples/examples-stress/pom.xml
+++ b/commons-rng-examples/examples-stress/pom.xml
@@ -29,7 +29,7 @@
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng-examples-stress</artifactId>
   <version>1.1-SNAPSHOT</version>
-  <name>Apache Commons RNG Stress Test Example</name>
+  <name>Stress test example</name>
 
   <description>Application for calling external tools that perform stringent uniformity tests.
   Code in this module is not part of the public API.</description>
