Replace FindBugs with SpotBugs
As per the discussion in [1], FindBugs has been discontinued, and
SpotBugs has taken its place.
This patch updates the Commons RNG project to use SpotBugs
accordingly.

[1] http://mail-archives.apache.org/mod_mbox/commons-dev/201802.mbox/raw/%3C4131eded52b31d3c9114fa5cbae48c4a%40scarlet.be%3E/
spotbgus

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ jdk:
   - oraclejdk9
 
 after_success:
-  - mvn clean test pmd:pmd findbugs:findbugs checkstyle:checkstyle jacoco:report coveralls:report
+  - mvn clean test pmd:pmd spotbugs:spotbugs checkstyle:checkstyle jacoco:report coveralls:report
