--- a/pom.xml
+++ b/pom.xml
@@ -318,7 +318,7 @@
         </reportSets>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
         <version>${rng.spotbugs.version}</version>
         <configuration>
