Mark module as "internal".

--- a/commons-rng-core/pom.xml
+++ b/commons-rng-core/pom.xml
@@ -40,7 +40,7 @@
   <properties>
     <!-- OSGi -->
     <commons.osgi.symbolicName>org.apache.commons.rng.core</commons.osgi.symbolicName>
-    <commons.osgi.export>org.apache.commons.rng.core</commons.osgi.export>
+    <commons.osgi.export>org.apache.commons.rng.core;x-friends:="org.apache.commons.rng.simple"</commons.osgi.export>
     <!-- Java 9+ -->
     <commons.automatic.module.name>org.apache.commons.rng.core</commons.automatic.module.name>
     <!-- Workaround to avoid duplicating config files. -->
