Upversion to parent 47, and sort out remaining issues

--- a/commons-rng-examples/examples-jpms/pom.xml
+++ b/commons-rng-examples/examples-jpms/pom.xml
@@ -41,6 +41,8 @@
     <!-- Java language level. -->
     <maven.compiler.source>9</maven.compiler.source>
     <maven.compiler.target>9</maven.compiler.target>
+    <animal.sniffer.skip>true</animal.sniffer.skip>
+    <maven.compiler.release>9</maven.compiler.release>
   </properties>
 
   <modules>
