--- a/dist-archive/pom.xml
+++ b/dist-archive/pom.xml
@@ -25,15 +25,28 @@ under the License.
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
   </parent>
 
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>pom</packaging>
   <name>Apache Commons RNG (full distribution)</name>
   <description>This module creates the Apache Commons RNG distribution.</description>
+
+  <properties>
+    <checkstyle.skip>true</checkstyle.skip>
+    <animal.sniffer.skip>true</animal.sniffer.skip>
+    <!-- Commons Release Plugin -->
+    <commons.bc.version>1.0</commons.bc.version>
+    <commons.release.isDistModule>true</commons.release.isDistModule>
+    <commons.siteOutputDirectory>${basedir}/../target/site</commons.siteOutputDirectory>
+    <commons.releaseNotesLocation>${basedir}/../RELEASE-NOTES.txt</commons.releaseNotesLocation>
+    <commons.distSvnStagingUrl>scm:svn:https://dist.apache.org/repos/dist/dev/commons/${commons.componentid}</commons.distSvnStagingUrl>
+    <commons.releaseManagerName>Rob Tompkins</commons.releaseManagerName>
+    <commons.releaseManagerKey>B6E73D84EA4FCC47166087253FAAD2CD5ECBB314</commons.releaseManagerKey>
+  </properties>
 
   <dependencies>
 
@@ -41,18 +54,18 @@ under the License.
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-client-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-client-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-client-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <classifier>javadoc</classifier>
     </dependency>
 
@@ -60,18 +73,18 @@ under the License.
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-core</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-core</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-core</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <classifier>javadoc</classifier>
     </dependency>
 
@@ -79,18 +92,18 @@ under the License.
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-simple</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-simple</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-simple</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <classifier>javadoc</classifier>
     </dependency>
 
@@ -98,56 +111,130 @@ under the License.
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-sampling</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-sampling</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-sampling</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <classifier>javadoc</classifier>
     </dependency>
 
-    <!-- Module: JMH -->
+    <!-- Module: Examples - JMH -->
     <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-rng-jmh</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <artifactId>commons-rng-examples-jmh</artifactId>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-rng-jmh</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <artifactId>commons-rng-examples-jmh</artifactId>
+      <version>1.1</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-rng-jmh</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <artifactId>commons-rng-examples-jmh</artifactId>
+      <version>1.1</version>
       <classifier>javadoc</classifier>
     </dependency>
 
-    <!-- Module: Examples -->
+    <!-- Module: Examples - JPMS -->
     <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-rng-examples</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <artifactId>commons-rng-examples-jpms-app</artifactId>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-rng-examples</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <artifactId>commons-rng-examples-jpms-app</artifactId>
+      <version>1.1</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-rng-examples</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <artifactId>commons-rng-examples-jpms-app</artifactId>
+      <version>1.1</version>
+      <classifier>javadoc</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-jpms-lib</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-jpms-lib</artifactId>
+      <version>1.1</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-jpms-lib</artifactId>
+      <version>1.1</version>
+      <classifier>javadoc</classifier>
+    </dependency>
+
+    <!-- Module: Examples - Quadrature -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-quadrature</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-quadrature</artifactId>
+      <version>1.1</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-quadrature</artifactId>
+      <version>1.1</version>
+      <classifier>javadoc</classifier>
+    </dependency>
+
+    <!-- Module: Examples - Sampling -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-sampling</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-sampling</artifactId>
+      <version>1.1</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-sampling</artifactId>
+      <version>1.1</version>
+      <classifier>javadoc</classifier>
+    </dependency>
+
+    <!-- Module: Examples - Stress -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-stress</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-stress</artifactId>
+      <version>1.1</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-examples-stress</artifactId>
+      <version>1.1</version>
       <classifier>javadoc</classifier>
     </dependency>
 
@@ -171,16 +258,32 @@ under the License.
       <build>
         <plugins>
           <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>get-dependencies</id>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>copy-dependencies</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
             <version>2.4</version>
+            <configuration>
+              <skipAssembly>false</skipAssembly>
+            </configuration>
             <executions>
               <execution>
                 <id>create-distribution</id>
-                <phase>package</phase>
+                <phase>install</phase>
                 <goals>
                   <goal>single</goal>
                 </goals>
                 <configuration>
+                  <skipAssembly>false</skipAssembly>
                   <descriptors>
                     <descriptor>src/assembly/bin.xml</descriptor>
                     <descriptor>src/assembly/src.xml</descriptor>
