rat exclude target and site-content

--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,8 @@
             <!-- version 0.8 of apache-rat-plugin does not exclude properly
                  some default development tools files (see RAT-126) -->
             <exclude>.ekstazi/**</exclude>
+            <exclude>**/site-content/**</exclude>
+            <exclude>**/target/**</exclude>
             <exclude>src/site/resources/txt/userguide/stress/dh/**</exclude>
             <exclude>src/site/resources/txt/userguide/stress/tu/**</exclude>
             <exclude>dist-archive/**</exclude>
