--- a/dist-archive/pom.xml
+++ b/dist-archive/pom.xml
@@ -278,7 +278,7 @@ under the License.
             <executions>
               <execution>
                 <id>create-distribution</id>
-                <phase>install</phase>
+                <phase>package</phase>
                 <goals>
                   <goal>single</goal>
                 </goals>
