--- a/pom.xml
+++ b/pom.xml
@@ -90,9 +90,8 @@
     <commons.automatic.module.name>org.apache.commons.rng.parent</commons.automatic.module.name>
     <!-- do not use snapshot suffix here -->
     <commons.release.version>1.1</commons.release.version>
-    <commons.rc.version>RC1</commons.rc.version>
+    <commons.rc.version>RC3</commons.rc.version>
     <commons.release.desc>(requires Java 6+)</commons.release.desc>
-     <commons.rc.version>RC2</commons.rc.version>
     <commons.binary.suffix>-bin</commons.binary.suffix>
 
     <commons.jira.id>RNG</commons.jira.id>
@@ -586,6 +585,7 @@
     <module>commons-rng-core</module>
     <module>commons-rng-simple</module>
     <module>commons-rng-sampling</module>
+    <module>commons-rng-examples</module>
     <module>dist-archive</module>
     <!--
         Built only upon explicit request (requires Java 1.7+).
