--- a/pom.xml
+++ b/pom.xml
@@ -58,14 +58,16 @@
       <id>erans</id>
       <email>erans at apache dot org</email>
     </developer>
+    <developer>
+      <name>Rob Tompkins</name>
+      <id>chtompki</id>
+      <email>chtompki at apache dot org</email>
+    </developer>
   </developers>
 
   <contributors>
     <contributor>
       <name>Artem Barger</name>
-    </contributor>
-    <contributor>
-      <name>Rob Tompkins</name>
     </contributor>
   </contributors>
 
@@ -90,7 +92,7 @@
     <commons.automatic.module.name>org.apache.commons.rng.parent</commons.automatic.module.name>
     <!-- do not use snapshot suffix here -->
     <commons.release.version>1.1</commons.release.version>
-    <commons.rc.version>RC7</commons.rc.version>
+    <commons.rc.version>RC1</commons.rc.version>
     <commons.release.desc>(requires Java 6+)</commons.release.desc>
     <commons.binary.suffix>-bin</commons.binary.suffix>
 
