--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -23,12 +23,12 @@
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-examples</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
 
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng-examples-jmh</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <name>JMH Benchmark</name>
 
   <description>Code for running JMH benchmarks that assess the performance of the generators.
