--- a/dist-archive/pom.xml
+++ b/dist-archive/pom.xml
@@ -25,12 +25,12 @@ under the License.
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
 
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Commons RNG (full distribution)</name>
   <description>This module creates the Apache Commons RNG distribution.</description>
@@ -71,18 +71,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -90,18 +90,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -109,18 +109,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -128,18 +128,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -147,18 +147,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jmh</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jmh</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jmh</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -166,35 +166,35 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-app</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-app</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-app</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-lib</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-lib</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-lib</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -202,18 +202,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-quadrature</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-quadrature</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-quadrature</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -221,18 +221,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-sampling</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-sampling</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-sampling</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -240,18 +240,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-stress</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-stress</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-stress</artifactId>
-          <version>1.1</version>
+          <version>1.2-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
