--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <name>Apache Commons RNG</name>
 
   <inceptionYear>2016</inceptionYear>
