--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,9 @@
     <contributor>
       <name>Artem Barger</name>
     </contributor>
+    <contributor>
+      <name>Alex D. Herbert</name>
+    </contributor>
   </contributors>
 
   <dependencies>
