--- a/commons-rng-examples/examples-jpms/jpms-lib/pom.xml
+++ b/commons-rng-examples/examples-jpms/jpms-lib/pom.xml
@@ -23,12 +23,12 @@
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-examples-jpms</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
   </parent>
 
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng-examples-jpms-lib</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
   <name>JPMS module example (library)</name>
 
   <description>Testing JPMS. Code in this module is not part of the public API.</description>
